# chaty

./: build.gradle.kts  install.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/app/trian/rust/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/app/trian/rust/: MainActivity.kt  MainApplication.kt  MainConstant.kt  MainViewModel.kt
app/src/main/java/app/trian/rust/common/: BaseStateImpl.kt  BaseViewModel.kt  Either.kt  FileManager.kt  GoogleAuthContract.kt  executeAsFlow.kt
app/src/main/java/app/trian/rust/component/: BottomSheetSendFriendRequest.kt  CardFriend.kt  CardFriendRequest.kt  CardUser.kt  CustomAppbar.kt  FunctionalityNotAvailablePanel.kt  JumpToBottom.kt  (+4 more)
app/src/main/java/uniffi/trianapp/: trianapp.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/app/trian/rust/: ExampleUnitTest.kt
common/: Cargo.toml  build.sh
common/core-app/: Cargo.toml
common/core-app/src/: lib.rs
common/core-app/src/hello/: anti_debugger.rs  mod.rs  test.rs
common/uniffi-bindgen/: Cargo.toml
common/uniffi-bindgen/src/: main.rs
generator/: build.gradle.kts
generator/src/androidTest/java/app/trian/generator/: ExampleInstrumentedTest.kt
generator/src/main/: AndroidManifest.xml
generator/src/main/java/app/trian/generator/: ImplClass.kt  StateAnnotation.kt  StateProcessor.kt  StateProcessorProvider.kt
generator/src/main/res/values/: strings.xml  themes.xml
generator/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+88 files in other folders)
