[package]
name = "core-app"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi.workspace = true
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde_json = { version = "1.0.113" }
thiserror = "1.0.57"


[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trianapp"
crate-type = [
    "staticlib", # must for iOS
    "cdylib", # must for Android
    "lib"
]

